--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root">Demo Page</div>
+    <div id="root">
+      <div>Demo Page</div>
+    </div>
   </body>
 </html>
